[client-android] Add initial implementation